--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "lucide-react": "^0.562.0",
+    "nodemailer": "^7.0.12",
+    "cors": "^2.8.5",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
